--- a/frontend/src/pages/styling/Help.css
+++ b/frontend/src/pages/styling/Help.css
@@ -4,14 +4,15 @@
 .helpWrappingDiv {
     border: 0px;
     background-color: rgb(230,230,230);
-    padding-bottom: 124px;
-    padding-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin: 0px;
 }
 
 .helpDiv {
     background-color: rgb(217,217,217);
     padding: 20px;
-    margin: 20px;
+    margin-top: 20px;
     border-radius: 20px;
 }
 
